# Trafficmonitor--Deeltaak1-Verkeersmonitor

./: LICENSE  readme.md
lib/USART/: CMakeLists.txt  README.md
lib/USART/examples/: CMakeLists.txt
lib/USART/examples/src/: serial.c
src/: main.c
